<resources>
    <string name="app_name">MyMovieCatalogueNew</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="movie_name">Movie Name</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string-array name="data_movie_name">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avenger Infinity</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Once Upon A Deadpool</item>
        <item>How To Train Your Dragon : The Hidden World</item>
        <item>Dragonball The Movie</item>
        <item>Spiderman : Into the Spider-verse</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_movie_description">
        <item>Seasoned musician Jackson Maine discovers - and falls in love with - struggling artist Ally. She has just about given up on her dream to make it big as a singer - until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_movie_genre">
        <item>DRAMA, ROMANCE, MUSIC</item>
        <item>ACTION, ADVENTURE, FANTASY</item>
        <item>ADVENTURE, ACTION, FANTASY</item>
        <item>THRILLER, DRAMA</item>
        <item>DRAMA, MUSIC</item>
        <item>ACTION, ADVENTURE ,SCIENCE FICTION</item>
        <item>COMEDY, ACTION</item>
        <item>ANIMATION, FAMILY, ADVENTURE</item>
        <item>ACTION, ANIMATION, FANTASY</item>
        <item>ACTION, COMEDY, ANIMATION</item>
        <item>SCIENCE FICTION, ACTION</item>
    </string-array>
    <string-array name="data_movie_director">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Joe Russo</item>
        <item>Susanne Bier</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
        <item>Rodney Rothman</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="data_series_name">
        <item>One Punch Man</item>
        <item>Chernobyl</item>
        <item>Mob Psycho 100</item>
        <item>The End Of The F***ing World</item>
        <item>13 Reasons Why</item>
        <item>Mr. Robot</item>
        <item>Great Teacher Onizuka</item>
        <item>The Umbrella Academy</item>
        <item>BoJack Horseman</item>
        <item>Devilman Crybaby</item>
    </string-array>
    <string-array name="data_series_description">
        <item>Saitama is a hero who only became a hero for fun. After three years of special training, though, he’s become so strong that he’s practically invincible. In fact, he’s too strong—even his mightiest opponents are taken out with a single punch, and it turns out that being devastatingly powerful is actually kind of a bore. With his passion for being a hero lost along with his hair, yet still faced with new enemies every day, how much longer can he keep it going?</item>
        <item>A dramatization of the true story of one of the worst man-made catastrophes in history, the catastrophic nuclear accident at Chernobyl. A tale of the brave men and women who sacrificed to save Europe from unimaginable disaster.</item>
        <item>Shigeo Kageyama, a.k.a. Mob, is a boy who has trouble expressing himself, but who happens to be a powerful esper. Mob is determined to live a normal life and keeps his ESP suppressed, but when his emotions surge to a level of 100\%, something terrible happens to him! As he surrounded by false espers, evil spirits, and mysterious organizations, what will Mob think? What choices will he make?</item>
        <item>James is 17 and is pretty sure he is a psychopath. Alyssa, also 17, is the cool and moody new girl at school. The pair make a connection and she persuades him to embark on a darkly comedic road trip in search of her real father.</item>
        <item>After a teenage girl\'s perplexing suicide, a classmate receives a series of tapes that unravel the mystery of her tragic choice.</item>
        <item>A contemporary and culturally resonant drama about a young programmer, Elliot, who suffers from a debilitating anti-social disorder and decides that he can only connect to people by hacking them. He wields his skills as a weapon to protect the people that he cares about. Elliot will find himself in the intersection between a cybersecurity firm he works for and the underworld organizations that are recruiting him to bring down corporate America.</item>
        <item>Onizuka is an ex-biker and gang leader who has one goal, to become the greatest teacher. He learns of the power and respect possible as an intern teacher, using his strength and connections to get his students to respect him. Now, graduated, he gets a job at a prestigious private school to handle their problem class that made the past few teachers quit. He must handle a different sort of trouble when the trouble makers include some of the smartest kids in Japan who prefer a more cerebral approach to torturing their teacher. Onizuka must slowly win his students over and deal with their mistrust of teachers while handling the distrust of his fellow teachers.</item>
        <item>A dysfunctional family of superheroes comes together to solve the mystery of their father death, the threat of the apocalypse and more.</item>
        <item>Meet the most beloved sitcom horse of the 90s - 20 years later. BoJack Horseman was the star of the hit TV show \"Horsin\' Around,\" but today he\'s washed up, living in Hollywood, complaining about everything, and wearing colorful sweaters.</item>
        <item>Akira Fudo learns from his best friend Ryo Asuka that demons will revive and reclaim the world from humans. With humans hopeless against this threat, Ryo suggests combining with a demon. With this, Akira becomes Devilman, a being with the power of demon but with a human heart.</item>
    </string-array>
    <string-array name="data_series_genre">
        <item>ACTION, ANIMATION, COMEDY</item>
        <item>DRAMA</item>
        <item>ACTION, ANIMATION, COMEDY</item>
        <item>COMEDY, DRAMA, CRIME</item>
        <item>DRAMA, MYSTERY</item>
        <item>CRIME, DRAMA</item>
        <item>COMEDY, DRAMA, ANIMATION</item>
        <item>ACTION, FANTASY</item>
        <item>DRAMA, COMEDY, ANIMATION</item>
        <item>ANIMATION, SCI-FI, FANTASY</item>
    </string-array>
    <string-array name="data_series_director">
        <item>One</item>
        <item>Johan Renck</item>
        <item>One</item>
        <item>Jonathan Entwistle</item>
        <item>Brian Yorkey</item>
        <item>Sam Esmail</item>
        <item>Tooru Fujisawa</item>
        <item>Steve Blackman</item>
        <item>Raphael Bob-Waksberg</item>
        <item>Masaaki Yuasa</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_show">TV SHOW</string>
    <string name="movies">MOVIES</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="director">Director</string>
    <string name="drama_action_animation">DRAMA, ACTION, ANIMATION</string>
    <string name="eichiro_oda">Eichiro Oda</string>
</resources>