<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".activity.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="16dp">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:background="@color/colorAccent"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorBlackOpacity" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_arrow_back_white_24dp" />

        </FrameLayout>

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_favorite_off_white_24dp"
            app:layout_constraintBottom_toTopOf="@+id/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:background="@color/colorBlackOpacity"
            android:paddingRight="4dp"
            android:src="@drawable/ic_starr"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_vote"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_vote" />

        <TextView
            android:id="@+id/tv_item_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorBlackOpacity"
            android:paddingEnd="4dp"
            android:textColor="#fff"
            android:textSize="10pt"
            app:layout_constraintBottom_toBottomOf="@id/frame"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="6.0" />


        <android.support.v7.widget.CardView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="250dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frame">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:maxLines="3"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/frame" />


        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/favorite" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/description"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/release_date"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description" />

        <TextView
            android:id="@+id/tv_detail_release"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/eichiro_oda"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@id/tv_director"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
